[package]
name = "whoops"
authors = ["Hisbaan Noorani"]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
description = "A CLI utility to undo common commands"
documentation = "https://github.com/hisbaan/whoops"
homepage = "https://github.com/hisbaan/whoops"
repository = "https://github.com/hisbaan/whoops"
readme = "docs/README.md"
keywords = ["undo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
dialoguer = { version = "0.10.1" }

[build-dependencies]
clap_complete = { version = "3.1.4" }
clap_mangen = { version = "0.1.6" }
clap = { version = "3.1.10", features = ["derive"] }
